@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added a ROADMAP section for planned changes.
 
 v0.2.0    2018-11-10 23:03:30+00:00 Europe/London
   [Enhancements]
